--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
+    "moment-timezone": "^0.5.46",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
     "react": "19.0.0-rc-69d4b800-20241021",
