--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "moment-timezone": "^0.5.46",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "18.2.0",
+   "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
