--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "next": "15.0.1",
     "next-auth": "^4.24.10",
     "react": "18.2.0",
-   "react-dom": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
