--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev && ngrok http --url=sunny-glowworm-unduly.ngrok-free.app 3000",
     "ngrok": "ngrok http --url=sunny-glowworm-unduly.ngrok-free.app 3000",
     "build": "next build",
     "start": "next start",
